kubernetes/03-reverse-proxy-internal/nvr-service.yml
kind: Service
apiVersion: v1
metadata:
  name: nvr
spec:
  externalName: "nvr.mcbadass.local"
  type: ExternalName
