kubernetes/03-reverse-proxy-internal/transmission.yml
kind: Service
apiVersion: v1
metadata:
  name: transmission
spec:
  externalName: "docker2.mcbadass.local"
  type: ExternalName
