kubernetes/03-reverse-proxy-internal/nvr-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nvr-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-internal
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
spec:
  tls:
  - hosts:
    - nvr.t-vo.us
    secretName: nvr-t-vo-us
  rules:
  - host: nvr.t-vo.us
    http:
      paths:
      - path: /
        backend:
          serviceName: nvr
          servicePort: 7443
status:
  loadBalancer: {}
