kubernetes/03-reverse-proxy-internal/transmission-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx-ingress-internal
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - transmission.t-vo.us
    secretName: transmission-t-vo-us
  rules:
  - host: transmission.t-vo.us
    http:
      paths:
      - path: /
        backend:
          serviceName: transmission
          servicePort: 9091
status:
  loadBalancer: {}
